# qualomat_schema

./: Cargo.toml  README.md
qualomat_schema_gen/: Cargo.toml
qualomat_schema_gen/src/: main.rs
src/: generated.rs  json.rs  lib.rs
