[package]
name = "qualomat_schema_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
prettyplease = "0.2.20"
schemars = "0.8.19"
serde_json = "1.0.117"
syn = "2.0.61"
typify = "0.0.16"
